# CrewAI-MCP-Lab

./: .env.example  .gitignore  LICENSE  README.md  crewai_mcp.template.json  requirements.txt
examples/05_illustrated_book_writer/: .gitignore  README.md  pyproject.toml  requirements.txt
examples/05_illustrated_book_writer/config/: config.template.yaml
examples/05_illustrated_book_writer/scripts/: start_llama_server.sh  start_tunnels.bat
examples/05_illustrated_book_writer/src/: main.py
examples/05_illustrated_book_writer/src/agents/: agents.py  tasks.py
examples/05_illustrated_book_writer/src/config/: config.py  settings.py
examples/05_illustrated_book_writer/src/core/: flow.py  state.py
examples/05_illustrated_book_writer/src/services/: bible.py  characters.py  llama_controller.py  ollama_controller.py  pdf_generator.py  rag.py  remote_image.py
examples/06_youtube_researcher/: README.md
examples/07_movie_analyst/: README.md
examples/08_financial_analyst/: .env.example  README.md  requirements.txt
examples/09_marketing_strategy/: .env.example  .gitignore  README.md  requirements.txt
mcp_servers/comfyui/: server.py
mcp_servers/comfyui-dgspark/: comfy_dgspark_server.py  requirements.txt
mcp_servers/simple-datetime-server/: index.js  package-lock.json  package.json
mcp_servers/yfinance_mcp/: requirements.txt  server.py
mcp_servers/yt-whisper/: TROUBLESHOOTING.md  requirements.txt  server.py  transcribe.py
memory/: activeContext.md  progress.md
src/: mcp_loader.py
src/services/: llama_controller.py  ollama_controller.py
(+55 files in other folders)
